Changes
=======

All issue numbers are relative to https://github.com/Toblerity/Fiona/issues.

1.8.14 (TBD)
------------

- Axis ordering for results of fiona.transform was wrong when CRS were passed
  in the "EPSG:dddd" form (#919). This has been fixed by (#926).
- Allow implicit access to the only dataset in a ZipMemoryFile. The path
  argument of ZipMemoryFile.open() is now optional (#928).
- Improve support for datetime types: support milliseconds (#744), timezones (#914)
  and improve warnings if type is not supported by driver (#572).
- Fix "Failed to commit transaction" TransactionError for FileGDB driver.
- Load GDAL DLL dependencies on Python 3.8+ / Windows with add_dll_directory() (#851).
- Do not require optional properties (#848).
- Ensure that slice does not overflow available data (#884).
- Resolve issue when "ERROR 4: Unable to open EPSG support file gcs.csv." is raised on
  importing fiona (#897).
- Resolve issue resulting in possible mixed up fields names (affecting only DXF, GPX,
  GPSTrackMacker and DGN driver) (#916).
- Ensure crs_wkt is passed when writing to MemoryFile (#907).


1.8.13.post1 (2020-02-21)
-------------------------

- This release is being made to improve binary wheel compatibility with shapely
  1.7.0. There have been no changes to the fiona package code since 1.8.13.

1.8.13 (2019-12-05)
-------------------

- The Python version specs for argparse and ordereddict in 1.8.12 were wrong
  and have been corrected (#843).

1.8.12 (2019-12-04)
-------------------

- Specify Python versions for argparse, enum34, and ordereddict requirements
  (#842).

1.8.11 (2019-11-07)
-------------------

- Fix an access violation on Windows (#826).

1.8.10 (2019-11-07)
-------------------

Deprecations:

- Use of vfs keyword argument with open or listlayers has been previously noted
  as deprecated, but now triggers a deprecation warning.

Bug fixes:

- fiona.open() can now create new datasets using CRS URNs (#823).