@@ -2,7 +2,6 @@
 
 from io import BytesIO
 import pytest
-import uuid
 
 import fiona
 from fiona.io import MemoryFile, ZipMemoryFile
@@ -14,11 +13,24 @@ def profile_first_coutwildrnp_shp(path_coutwildrnp_shp):
         return col.profile, next(iter(col))
 
 
-def test_memoryfile(path_coutwildrnp_json):
-    """In-memory GeoJSON file can be read"""
+@pytest.fixture(scope='session')
+def data_coutwildrnp_json(path_coutwildrnp_json):
     with open(path_coutwildrnp_json, 'rb') as f:
-        data = f.read()
-    with MemoryFile(data) as memfile:
+        return f.read()
+
+
+def test_memoryfile_init(data_coutwildrnp_json):
+    """In-memory GeoJSON file can be read"""
+    with MemoryFile(data_coutwildrnp_json) as memfile:
+        with memfile.open() as collection:
+            assert len(collection) == 67
+
+
+def test_memoryfile_incr_init(data_coutwildrnp_json):
+    """In-memory GeoJSON file written in 2 parts can be read"""
+    with MemoryFile() as memfile:
+        memfile.write(data_coutwildrnp_json[:1000])
+        memfile.write(data_coutwildrnp_json[1000:])
         with memfile.open() as collection:
             assert len(collection) == 67
 
@@ -37,8 +49,26 @@ def test_zip_memoryfile_infer_layer_name(bytes_coutwildrnp_zip):
             assert len(collection) == 67
 
 
+def test_open_closed():
+    """Get an exception when opening a dataset on a closed MemoryFile"""
+    memfile = MemoryFile()
+    memfile.close()
+    assert memfile.closed
+    with pytest.raises(IOError):
+        memfile.open()
+
+
+def test_open_closed_zip():
+    """Get an exception when opening a dataset on a closed ZipMemoryFile"""
+    memfile = ZipMemoryFile()
+    memfile.close()
+    assert memfile.closed
+    with pytest.raises(IOError):
+        memfile.open()
+
+
 def test_write_memoryfile(profile_first_coutwildrnp_shp):
-    """In-memory Shapefile can be written"""
+    """In-memory GeoJSON can be written"""
     profile, first = profile_first_coutwildrnp_shp
     profile['driver'] = 'GeoJSON'
     with MemoryFile() as memfile:
@@ -52,25 +82,21 @@ def test_write_memoryfile(profile_first_coutwildrnp_shp):
             assert len(col) == 1
 
 
-def test_memoryfile_bytesio(path_coutwildrnp_json):
-    """In-memory GeoJSON file can be read"""
-    with open(path_coutwildrnp_json, 'rb') as f:
-        data = f.read()
-
-    with fiona.open(BytesIO(data)) as collection:
+def test_memoryfile_bytesio(data_coutwildrnp_json):
+    """GeoJSON file stored in BytesIO can be read"""
+    with fiona.open(BytesIO(data_coutwildrnp_json)) as collection:
         assert len(collection) == 67
 
 
 def test_memoryfile_fileobj(path_coutwildrnp_json):
-    """In-memory GeoJSON file can be read"""
+    """GeoJSON file in an open file object can be read"""
     with open(path_coutwildrnp_json, 'rb') as f:
-
         with fiona.open(f) as collection:
             assert len(collection) == 67
 
 
-def test_write_memoryfile_(profile_first_coutwildrnp_shp):
-    """In-memory Shapefile can be written"""
+def test_write_bytesio(profile_first_coutwildrnp_shp):
+    """GeoJSON can be written to BytesIO"""
     profile, first = profile_first_coutwildrnp_shp
     profile['driver'] = 'GeoJSON'
     with BytesIO() as fout:
