@@ -6,6 +6,8 @@ All issue numbers are relative to https://github.com/Toblerity/Fiona/issues.
 1.8.14 (TBD)
 ------------
 
+- The MemoryFile implementation has been improved so that it can support multi-part
+  S3 downloads (#906). This is largely a port of code from rasterio.
 - Axis ordering for results of fiona.transform was wrong when CRS were passed
   in the "EPSG:dddd" form (#919). This has been fixed by (#926).
 - Allow implicit access to the only dataset in a ZipMemoryFile. The path
